# ksmtuned

./: HISTORY  README.md  ksm.service  meson.build  meson_options.txt
data/: ksm.service.in  ksmtuned.service.in
src/: ksmtuned.sh.in
